example/advanced/smoketestservice-deployment-metallb-template.yml
### DO NOT EDIT THIS FILE DIRECTLY
### It is being used by generate_deployment_file.sh script.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: TESTNAMESPACE
  name: SMOKETESTSERVICE-deployment
  labels:
    app: SMOKETESTSERVICE
spec:
  selector:
    matchLabels:
      app: SMOKETESTSERVICE
  replicas: 2 
  template:
    metadata:
      labels:
        app: SMOKETESTSERVICE
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        command: ["/bin/sh"]
        args: ["-c", "echo 'SMOKETESTSERVICE | MetalLB works properly!' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]

---
apiVersion: v1
kind: Service
metadata:
  name: SMOKETESTSERVICE-service
  namespace: TESTNAMESPACE
  labels:
    app: SMOKETESTSERVICE
  annotations:
    metallb.universe.tf/loadBalancerIPs: METALLB_POOL_IP_ADDR
spec:
  selector:
      app: "SMOKETESTSERVICE"
  ports:
  - name: http-web
    port: 80
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
